force-app/main/default/objects/SFDC_Employee__c/fields/BU_Description__c.field-meta.xml
<CustomField>
    <fullName>BU_Description__c</fullName>
    <label>BU Description</label>
    <length>70</length>
    <type>Text</type>
</CustomField>