force-app/main/default/objects/SFDC_Employee__c/fields/Call_Center__c.field-meta.xml
<CustomField>
    <fullName>Call_Center__c</fullName>
    <label>Call Center #</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>