force-app/main/default/objects/SFDC_Employee__c/fields/Corp_Photo__c.field-meta.xml
<CustomField>
    <fullName>Corp_Photo__c</fullName>
    <formula>IMAGE(&quot;http://www.salesforceius.com/appx/staffpix/&quot;&amp;  JPG__c , Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corp Photo</label>
    <type>Text</type>
</CustomField>