force-app/main/default/objects/SFDC_Employee__c/fields/Days_Employed__c.field-meta.xml
<CustomField>
    <fullName>Days_Employed__c</fullName>
    <formula>TODAY () - Hire_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Employed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>