force-app/main/default/objects/SFDC_Employee__c/fields/Desk_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Desk_Terminal__c</fullName>
    <label>Desk Terminal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>