force-app/main/default/objects/SFDC_Employee__c/fields/Employee_Fax__c.field-meta.xml
<CustomField>
    <fullName>Employee_Fax__c</fullName>
    <label>Employee Fax</label>
    <type>Phone</type>
</CustomField>