force-app/main/default/objects/SFDC_Employee__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <description>Emp ID for charting</description>
    <displayFormat>{0000000}</displayFormat>
    <label>Employee ID</label>
    <type>AutoNumber</type>
</CustomField>