force-app/main/default/objects/SFDC_Employee__c/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Caucasion</fullName>
            </value>
            <value>
                <fullName>Afican-American</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>