force-app/main/default/objects/SFDC_Employee__c/fields/Former_Employer__c.field-meta.xml
<CustomField>
    <fullName>Former_Employer__c</fullName>
    <label>Former Employer 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>