force-app/main/default/objects/SFDC_Employee__c/fields/Gym_Member__c.field-meta.xml
<CustomField>
    <fullName>Gym_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gym Member</label>
    <type>Checkbox</type>
</CustomField>