force-app/main/default/objects/SFDC_Employee__c/fields/IsAssistant__c.field-meta.xml
<CustomField>
    <fullName>IsAssistant__c</fullName>
    <label>IsAssistant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>