force-app/main/default/objects/SFDC_Employee__c/fields/Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Function__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Function</label>
    <referenceTo>SFDC_Job_Function__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>R00N30000001eUPQEA2</relationshipName>
    <type>Lookup</type>
</CustomField>