force-app/main/default/objects/SFDC_Employee__c/fields/JPG__c.field-meta.xml
<CustomField>
    <fullName>JPG__c</fullName>
    <label>JPG</label>
    <length>20</length>
    <type>Text</type>
</CustomField>