force-app/main/default/objects/SFDC_Employee__c/fields/Mail_Drop__c.field-meta.xml
<CustomField>
    <fullName>Mail_Drop__c</fullName>
    <label>Mail Drop</label>
    <length>10</length>
    <type>Text</type>
</CustomField>