force-app/main/default/objects/SFDC_Employee__c/fields/Org_Unit__c.field-meta.xml
<CustomField>
    <fullName>Org_Unit__c</fullName>
    <label>Org Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>