force-app/main/default/objects/SFDC_Employee__c/fields/Position_ID__c.field-meta.xml
<CustomField>
    <fullName>Position_ID__c</fullName>
    <label>Position ID</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>