force-app/main/default/objects/SFDC_Employee__c/fields/Security_ID__c.field-meta.xml
<CustomField>
    <fullName>Security_ID__c</fullName>
    <label>Security ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>