force-app/main/default/objects/SFDC_Employee__c/fields/Special_Skills__c.field-meta.xml
<CustomField>
    <fullName>Special_Skills__c</fullName>
    <label>Special Skills</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>