force-app/main/default/objects/SFDC_Employee__c/fields/Supervisor_Emp_ID__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Emp_ID__c</fullName>
    <label>Supervisor Emp ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>