force-app/main/default/objects/SFDC_Employee__c/fields/Supervisor_Name_Full__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Name_Full__c</fullName>
    <label>Supervisor Name (Full)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>