force-app/main/default/objects/SFDC_Employee__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <label>User ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>