force-app/main/default/objects/SFDC_Employee__c/fields/Vacation_Days__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Days__c</fullName>
    <label>Vacation Days</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>