force-app/main/default/objects/SFDC_Employee__c/fields/Yahoo_IM__c.field-meta.xml
<CustomField>
    <fullName>Yahoo_IM__c</fullName>
    <label>Yahoo IM</label>
    <length>40</length>
    <type>Text</type>
</CustomField>