force-app/main/default/objects/SFDC_Employee__c/fields/Yearly_Comp__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Comp__c</fullName>
    <formula>Salary__c  +  Bonus_Potential__c  +  Total_Stock_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>