force-app/main/default/objects/SFDC_Employee__c/listViews/Contractors.listView-meta.xml
<ListView>
    <fullName>Contractors</fullName>
    <columns>NAME</columns>
    <columns>Employee_Status__c</columns>
    <columns>Hire_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_Type__c</field>
        <operation>equals</operation>
        <value>Contract</value>
    </filters>
    <label>Contractors</label>
</ListView>