force-app/main/default/objects/SFDC_Employee__c/listViews/FullTimeEmployees.listView-meta.xml
<ListView>
    <fullName>FullTimeEmployees</fullName>
    <columns>NAME</columns>
    <columns>Employee_Type__c</columns>
    <columns>Title__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_Type__c</field>
        <operation>equals</operation>
        <value>Full Time</value>
    </filters>
    <label>Full Time Employees</label>
</ListView>